@@ -1,11 +1,12 @@
-package com.artiexh.model.product;
+package com.artiexh.model.mapper;
 
 import com.artiexh.data.jpa.entity.MerchAttachEntity;
 import com.artiexh.data.jpa.entity.MerchCategoryEntity;
 import com.artiexh.data.jpa.entity.MerchEntity;
 import com.artiexh.model.domain.MerchAttachType;
-import com.artiexh.model.mapper.*;
-import com.artiexh.model.product.request.UpdateProductRequest;
+import com.artiexh.model.rest.product.ProductDetail;
+import com.artiexh.model.rest.product.ProductInfo;
+import com.artiexh.model.rest.product.request.UpdateProductRequest;
 import org.mapstruct.*;
 
 import java.util.List;
@@ -29,8 +30,9 @@ import java.util.stream.Collectors;
 )
 public interface ProductMapper {
 
-	@Mapping(target = "categoryInfo", source = "categories", qualifiedByName = "categoryMapping")
+//	@Mapping(target = "categoryInfo", source = "categories", qualifiedByName = "categoryMapping")
 	@Mapping(target = "ownerInfo", source = "owner")
+	@Mapping(target = "categoryInfo", source = "category")
 	ProductDetail entityToModelDetail(MerchEntity merchEntity);
 
 	@Named("entityToModelInfo")
@@ -49,20 +51,12 @@ public interface ProductMapper {
 	@Mapping(target = "owner", ignore = true)
 	MerchEntity domainModelToEntity(ProductDetail merch, @MappingTarget MerchEntity entity);
 
-	@Named("categoryMapping")
-	default Map<Long, String> categoryMapping(Set<MerchCategoryEntity> categoryEntities) {
-		Map<Long, String> categories;
-		categories = categoryEntities.stream()
-			.collect(Collectors.toMap(MerchCategoryEntity::getId, MerchCategoryEntity::getName));
-		return categories;
-	}
-
 	@Named("attachmentMapping")
 	default String attachmentMapping(Set<MerchAttachEntity> attachments) {
 		MerchAttachEntity attachEntity = attachments.stream()
 			.filter(attachment ->
 				MerchAttachType.THUMBNAIL.getValue() == attachment.getType().intValue())
-			.collect(Collectors.toList()).get(0);
+			.toList().get(0);
 		if (attachEntity == null) {
 			return null;
 		} else {
